--- a/hp.html
+++ b/hp.html
@@ -19,24 +19,36 @@
         <h2>NorthStar</h2>
       </div>
 
-      <div class="logo_img">
-        <img src="logo1.png">
-    </div>
-
-      <div class="scelte">
+      <div class="s1">
         <button>Come funziona</button>
       <div class="dropdown-content">
-        <p>ciao</p>
+        <p>ciao1</p>
       </div>
-        <a href="#" class="link">Sedi</a>
-        <a href="#" class="link">Per Business</a>
-        <a href="#" class="link">Supporto</a>
+      </div>
+        <div class="s2">
+        <button>Sedi</button>
+      <div class="dropdown-content">
+        <p>ciao2</p>
+      </div>
+      </div>
+        <div class="s3">
+        <button>Per Business</button>
+      <div class="dropdown-content">
+        <p>ciao3</p>
+      </div>
+      </div>
+        <div class="s4">
+        <button>Supporto</button>
+      <div class="dropdown-content">
+        <p>ciao4</p>
+      </div>
       </div>
 
       <div class="login">
         <button class="btn btn-outline">Log in</button>
       </div>
     </div>
+</div>
   </header>
 
 
